@@ -5,8 +5,6 @@
 
 package org.jetbrains.kotlin.codegen;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.util.io.FileUtil;
 import com.intellij.testFramework.TestDataFile;
@@ -19,9 +17,7 @@ import org.jetbrains.annotations.Nullable;
 import org.jetbrains.kotlin.TestHelperGeneratorKt;
 import org.jetbrains.kotlin.TestsCompilerError;
 import org.jetbrains.kotlin.TestsCompiletimeError;
-import org.jetbrains.kotlin.backend.common.output.OutputFile;
 import org.jetbrains.kotlin.backend.common.output.SimpleOutputFileCollection;
-import org.jetbrains.kotlin.checkers.CompilerTestLanguageVersionSettings;
 import org.jetbrains.kotlin.checkers.utils.CheckerTestUtil;
 import org.jetbrains.kotlin.cli.common.CLIConfigurationKeys;
 import org.jetbrains.kotlin.cli.common.output.OutputUtilsKt;
@@ -29,56 +25,41 @@ import org.jetbrains.kotlin.cli.jvm.compiler.EnvironmentConfigFiles;
 import org.jetbrains.kotlin.cli.jvm.compiler.KotlinCoreEnvironment;
 import org.jetbrains.kotlin.cli.jvm.compiler.NoScopeRecordCliBindingTrace;
 import org.jetbrains.kotlin.cli.jvm.config.JvmClasspathRoot;
-import org.jetbrains.kotlin.cli.jvm.config.JvmContentRootsKt;
 import org.jetbrains.kotlin.codegen.forTestCompile.ForTestCompileRuntime;
 import org.jetbrains.kotlin.codegen.state.GenerationState;
-import org.jetbrains.kotlin.config.*;
+import org.jetbrains.kotlin.config.CompilerConfiguration;
+import org.jetbrains.kotlin.config.JVMConfigurationKeys;
+import org.jetbrains.kotlin.config.JvmTarget;
 import org.jetbrains.kotlin.fileClasses.JvmFileClassUtil;
 import org.jetbrains.kotlin.name.FqName;
 import org.jetbrains.kotlin.psi.KtFile;
-import org.jetbrains.kotlin.resolve.DescriptorUtils;
 import org.jetbrains.kotlin.scripting.definitions.ScriptDependenciesProvider;
 import org.jetbrains.kotlin.scripting.resolve.ScriptCompilationConfigurationWrapper;
 import org.jetbrains.kotlin.test.*;
 import org.jetbrains.kotlin.test.clientserver.TestProxy;
-import org.jetbrains.kotlin.test.testFramework.KtUsefulTestCase;
+import org.jetbrains.kotlin.test.util.KtTestUtil;
 import org.jetbrains.kotlin.utils.ExceptionUtilsKt;
-import org.jetbrains.org.objectweb.asm.ClassReader;
-import org.jetbrains.org.objectweb.asm.tree.ClassNode;
-import org.jetbrains.org.objectweb.asm.tree.MethodNode;
-import org.jetbrains.org.objectweb.asm.tree.analysis.Analyzer;
-import org.jetbrains.org.objectweb.asm.tree.analysis.AnalyzerException;
-import org.jetbrains.org.objectweb.asm.tree.analysis.BasicValue;
-import org.jetbrains.org.objectweb.asm.tree.analysis.SimpleVerifier;
-import org.jetbrains.org.objectweb.asm.util.Textifier;
-import org.jetbrains.org.objectweb.asm.util.TraceMethodVisitor;
 
 import java.io.File;
 import java.io.IOException;
-import java.io.PrintWriter;
-import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.util.*;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
-import static org.jetbrains.kotlin.checkers.CompilerTestLanguageVersionSettingsKt.parseLanguageVersionSettings;
 import static org.jetbrains.kotlin.cli.common.output.OutputUtilsKt.writeAllTo;
 import static org.jetbrains.kotlin.codegen.CodegenTestUtil.*;
 import static org.jetbrains.kotlin.codegen.TestUtilsKt.extractUrls;
-import static org.jetbrains.kotlin.test.KotlinTestUtils.getAnnotationsJar;
-import static org.jetbrains.kotlin.test.clientserver.TestProcessServerKt.getBoxMethodOrNull;
-import static org.jetbrains.kotlin.test.clientserver.TestProcessServerKt.getGeneratedClass;
+import static org.jetbrains.kotlin.test.clientserver.TestProcessServerKt.*;
+import static org.jetbrains.kotlin.test.util.KtTestUtil.getAnnotationsJar;
 
-public abstract class CodegenTestCase extends KtUsefulTestCase {
+public abstract class CodegenTestCase extends KotlinBaseTest<KotlinBaseTest.TestFile> {
     private static final String DEFAULT_TEST_FILE_NAME = "a_test";
     private static final String DEFAULT_JVM_TARGET = System.getProperty("kotlin.test.default.jvm.target");
     public static final String BOX_IN_SEPARATE_PROCESS_PORT = System.getProperty("kotlin.test.box.in.separate.process.port");
-    private static final String JAVA_COMPILATION_TARGET = System.getProperty("kotlin.test.java.compilation.target");
 
     protected KotlinCoreEnvironment myEnvironment;
     protected CodegenTestFiles myFiles;
@@ -86,7 +67,6 @@ public abstract class CodegenTestCase extends KtUsefulTestCase {
     protected GeneratedClassLoader initializedClassLoader;
     protected File javaClassesOutputDirectory = null;
     protected List<File> additionalDependencies = null;
-    protected String coroutinesPackage = "";
 
     protected ConfigurationKind configurationKind = ConfigurationKind.JDK_ONLY;
 
@@ -95,16 +75,6 @@ public abstract class CodegenTestCase extends KtUsefulTestCase {
             @NotNull File... javaSourceRoots
     ) {
         createEnvironmentWithMockJdkAndIdeaAnnotations(configurationKind, Collections.emptyList(), TestJdkKind.MOCK_JDK, javaSourceRoots);
-    }
-
-    @NotNull
-    protected static TestJdkKind getJdkKind(@NotNull List<TestFile> files) {
-        for (TestFile file : files) {
-            if (InTextDirectivesUtils.isDirectiveDefined(file.content, "FULL_JDK")) {
-                return TestJdkKind.FULL_JDK;
-            }
-        }
-        return TestJdkKind.MOCK_JDK;
     }
 
     protected final void createEnvironmentWithMockJdkAndIdeaAnnotations(
@@ -120,6 +90,7 @@ public abstract class CodegenTestCase extends KtUsefulTestCase {
         CompilerConfiguration configuration = createConfiguration(
                 configurationKind,
                 testJdkKind,
+                getBackend(),
                 Collections.singletonList(getAnnotationsJar()),
                 ArraysKt.filterNotNull(javaSourceRoots),
                 testFilesWithConfigurationDirectives
@@ -128,189 +99,8 @@ public abstract class CodegenTestCase extends KtUsefulTestCase {
         myEnvironment = KotlinCoreEnvironment.createForTests(
                 getTestRootDisposable(), configuration, EnvironmentConfigFiles.JVM_CONFIG_FILES
         );
-    }
 
-    protected void configureTestSpecific(@NotNull CompilerConfiguration configuration, @NotNull List<TestFile> testFiles) {}
-
-    @NotNull
-    protected CompilerConfiguration createConfiguration(
-            @NotNull ConfigurationKind kind,
-            @NotNull TestJdkKind jdkKind,
-            @NotNull List<File> classpath,
-            @NotNull List<File> javaSource,
-            @NotNull List<TestFile> testFilesWithConfigurationDirectives
-    ) {
-        CompilerConfiguration configuration = KotlinTestUtils.newConfiguration(kind, jdkKind, classpath, javaSource);
-        configuration.put(JVMConfigurationKeys.IR, getBackend().isIR());
-
-        updateConfigurationByDirectivesInTestFiles(testFilesWithConfigurationDirectives, configuration, coroutinesPackage);
-        updateConfiguration(configuration);
-        setCustomDefaultJvmTarget(configuration);
-
-        configureTestSpecific(configuration, testFilesWithConfigurationDirectives);
-
-        return configuration;
-    }
-
-    protected static void updateConfigurationByDirectivesInTestFiles(
-            @NotNull List<TestFile> testFilesWithConfigurationDirectives,
-            @NotNull CompilerConfiguration configuration
-    ) {
-        updateConfigurationByDirectivesInTestFiles(testFilesWithConfigurationDirectives, configuration, "");
-    }
-
-    private static void updateConfigurationByDirectivesInTestFiles(
-            @NotNull List<TestFile> testFilesWithConfigurationDirectives,
-            @NotNull CompilerConfiguration configuration,
-            @NotNull String coroutinesPackage
-    ) {
-        LanguageVersionSettings explicitLanguageVersionSettings = null;
-        boolean disableReleaseCoroutines = false;
-        boolean includeCompatExperimentalCoroutines = false;
-
-        List<String> kotlinConfigurationFlags = new ArrayList<>(0);
-        for (TestFile testFile : testFilesWithConfigurationDirectives) {
-            kotlinConfigurationFlags.addAll(InTextDirectivesUtils.findListWithPrefixes(testFile.content, "// KOTLIN_CONFIGURATION_FLAGS:"));
-
-            List<String> lines = InTextDirectivesUtils.findLinesWithPrefixesRemoved(testFile.content, "// JVM_TARGET:");
-            if (!lines.isEmpty()) {
-                String targetString = CollectionsKt.single(lines);
-                JvmTarget jvmTarget = JvmTarget.Companion.fromString(targetString);
-                assert jvmTarget != null : "Unknown target: " + targetString;
-                configuration.put(JVMConfigurationKeys.JVM_TARGET, jvmTarget);
-            }
-
-            String version = InTextDirectivesUtils.findStringWithPrefixes(testFile.content, "// LANGUAGE_VERSION:");
-            if (version != null) {
-                throw new AssertionError(
-                        "Do not use LANGUAGE_VERSION directive in compiler tests because it's prone to limiting the test\n" +
-                        "to a specific language version, which will become obsolete at some point and the test won't check\n" +
-                        "things like feature intersection with newer releases. Use `// !LANGUAGE: [+-]FeatureName` directive instead,\n" +
-                        "where FeatureName is an entry of the enum `LanguageFeature`\n"
-                );
-            }
-
-            if (!InTextDirectivesUtils.findLinesWithPrefixesRemoved(testFile.content, "// COMMON_COROUTINES_TEST").isEmpty()) {
-                assert !testFile.content.contains("COROUTINES_PACKAGE") : "Must replace COROUTINES_PACKAGE prior to tests compilation";
-                if (DescriptorUtils.COROUTINES_PACKAGE_FQ_NAME_EXPERIMENTAL.asString().equals(coroutinesPackage)) {
-                    disableReleaseCoroutines = true;
-                    includeCompatExperimentalCoroutines = true;
-                }
-            }
-
-            if (testFile.content.contains(DescriptorUtils.COROUTINES_PACKAGE_FQ_NAME_EXPERIMENTAL.asString())) {
-                includeCompatExperimentalCoroutines = true;
-            }
-
-            Map<String, String> directives = KotlinTestUtils.parseDirectives(testFile.content);
-
-            LanguageVersionSettings fileLanguageVersionSettings = parseLanguageVersionSettings(directives);
-            if (fileLanguageVersionSettings != null) {
-                assert explicitLanguageVersionSettings == null : "Should not specify !LANGUAGE directive twice";
-                explicitLanguageVersionSettings = fileLanguageVersionSettings;
-            }
-        }
-
-        if (disableReleaseCoroutines) {
-            explicitLanguageVersionSettings = new CompilerTestLanguageVersionSettings(
-                    Collections.singletonMap(LanguageFeature.ReleaseCoroutines, LanguageFeature.State.DISABLED),
-                    ApiVersion.LATEST_STABLE,
-                    LanguageVersion.LATEST_STABLE,
-                    Collections.emptyMap()
-            );
-        }
-        if (includeCompatExperimentalCoroutines) {
-            JvmContentRootsKt.addJvmClasspathRoot(configuration, ForTestCompileRuntime.coroutinesCompatForTests());
-        }
-
-        if (explicitLanguageVersionSettings != null) {
-            CommonConfigurationKeysKt.setLanguageVersionSettings(configuration, explicitLanguageVersionSettings);
-        }
-
-        updateConfigurationWithFlags(configuration, kotlinConfigurationFlags);
-    }
-
-    private static final Map<String, Class<?>> FLAG_NAMESPACE_TO_CLASS = ImmutableMap.of(
-            "CLI", CLIConfigurationKeys.class,
-            "JVM", JVMConfigurationKeys.class
-    );
-
-    private static final List<Class<?>> FLAG_CLASSES = ImmutableList.of(CLIConfigurationKeys.class, JVMConfigurationKeys.class);
-
-    private static final Pattern BOOLEAN_FLAG_PATTERN = Pattern.compile("([+-])(([a-zA-Z_0-9]*)\\.)?([a-zA-Z_0-9]*)");
-    private static final Pattern CONSTRUCTOR_CALL_NORMALIZATION_MODE_FLAG_PATTERN = Pattern.compile(
-            "CONSTRUCTOR_CALL_NORMALIZATION_MODE=([a-zA-Z_\\-0-9]*)");
-    private static final Pattern ASSERTIONS_MODE_FLAG_PATTERN = Pattern.compile("ASSERTIONS_MODE=([a-zA-Z_0-9-]*)");
-
-    private static void updateConfigurationWithFlags(@NotNull CompilerConfiguration configuration, @NotNull List<String> flags) {
-        for (String flag : flags) {
-            Matcher m = BOOLEAN_FLAG_PATTERN.matcher(flag);
-            if (m.matches()) {
-                boolean flagEnabled = !"-".equals(m.group(1));
-                String flagNamespace = m.group(3);
-                String flagName = m.group(4);
-
-                tryApplyBooleanFlag(configuration, flag, flagEnabled, flagNamespace, flagName);
-                continue;
-            }
-
-            m = CONSTRUCTOR_CALL_NORMALIZATION_MODE_FLAG_PATTERN.matcher(flag);
-            if (m.matches()) {
-                String flagValueString = m.group(1);
-                JVMConstructorCallNormalizationMode mode = JVMConstructorCallNormalizationMode.fromStringOrNull(flagValueString);
-                assert mode != null : "Wrong CONSTRUCTOR_CALL_NORMALIZATION_MODE value: " + flagValueString;
-                configuration.put(JVMConfigurationKeys.CONSTRUCTOR_CALL_NORMALIZATION_MODE, mode);
-            }
-
-            m = ASSERTIONS_MODE_FLAG_PATTERN.matcher(flag);
-            if (m.matches()) {
-                String flagValueString = m.group(1);
-                JVMAssertionsMode mode = JVMAssertionsMode.fromStringOrNull(flagValueString);
-                assert mode != null : "Wrong ASSERTIONS_MODE value: " + flagValueString;
-                configuration.put(JVMConfigurationKeys.ASSERTIONS_MODE, mode);
-            }
-        }
-    }
-
-    private static void tryApplyBooleanFlag(
-            @NotNull CompilerConfiguration configuration,
-            @NotNull String flag,
-            boolean flagEnabled,
-            @Nullable String flagNamespace,
-            @NotNull String flagName
-    ) {
-        Class<?> configurationKeysClass;
-        Field configurationKeyField = null;
-        if (flagNamespace == null) {
-            for (Class<?> flagClass : FLAG_CLASSES) {
-                try {
-                    configurationKeyField = flagClass.getField(flagName);
-                    break;
-                }
-                catch (Exception ignored) {
-                }
-            }
-        }
-        else {
-            configurationKeysClass = FLAG_NAMESPACE_TO_CLASS.get(flagNamespace);
-            assert configurationKeysClass != null : "Expected [+|-][namespace.]configurationKey, got: " + flag;
-            try {
-                configurationKeyField = configurationKeysClass.getField(flagName);
-            }
-            catch (Exception e) {
-                configurationKeyField = null;
-            }
-        }
-        assert configurationKeyField != null : "Expected [+|-][namespace.]configurationKey, got: " + flag;
-
-        try {
-            @SuppressWarnings("unchecked")
-            CompilerConfigurationKey<Boolean> configurationKey = (CompilerConfigurationKey<Boolean>) configurationKeyField.get(null);
-            configuration.put(configurationKey, flagEnabled);
-        }
-        catch (Exception e) {
-            assert false : "Expected [+|-][namespace.]configurationKey, got: " + flag;
-        }
+        setupEnvironment(myEnvironment);
     }
 
     @Override
@@ -333,7 +123,7 @@ public abstract class CodegenTestCase extends KtUsefulTestCase {
 
     @NotNull
     protected String loadFile(@NotNull @TestDataFile String name) {
-        return loadFileByFullPath(KotlinTestUtils.getTestDataPathBase() + "/codegen/" + name);
+        return loadFileByFullPath(KtTestUtil.getTestDataPathBase() + "/codegen/" + name);
     }
 
     @NotNull
@@ -371,7 +161,7 @@ public abstract class CodegenTestCase extends KtUsefulTestCase {
             if (file.name.endsWith(".kt") || file.name.endsWith(".kts")) {
                 // `rangesToDiagnosticNames` parameter is not-null only for diagnostic tests, it's using for lazy diagnostics
                 String content = CheckerTestUtil.INSTANCE.parseDiagnosedRanges(file.content, new ArrayList<>(0), null);
-                ktFiles.add(KotlinTestUtils.createFile(file.name, content, project));
+                ktFiles.add(KtTestUtil.createFile(file.name, content, project));
             }
         }
 
@@ -401,7 +191,7 @@ public abstract class CodegenTestCase extends KtUsefulTestCase {
 
         initializedClassLoader = createClassLoader();
 
-        if (!verifyAllFilesWithAsm(generateClassesInFile(reportProblems), initializedClassLoader, reportProblems)) {
+        if (!CodegenTestUtil.verifyAllFilesWithAsm(generateClassesInFile(reportProblems), initializedClassLoader, reportProblems)) {
             fail("Verification failed: see exceptions above");
         }
 
@@ -434,7 +224,6 @@ public abstract class CodegenTestCase extends KtUsefulTestCase {
         if (additionalDependencies != null) {
             files.addAll(additionalDependencies);
         }
-        files.addAll(getExtraDependenciesFromKotlinCompileClasspath());
 
         ScriptDependenciesProvider externalImportsProvider =
                 ScriptDependenciesProvider.Companion.getInstance(myEnvironment.getProject());
@@ -460,20 +249,6 @@ public abstract class CodegenTestCase extends KtUsefulTestCase {
             throw ExceptionUtilsKt.rethrow(e);
         }
     }
-
-    private Set<File> getExtraDependenciesFromKotlinCompileClasspath() {
-        List<File> includeFromCompileClasspath = CollectionsKt.listOf(
-                ForTestCompileRuntime.coroutinesCompatForTests()
-        );
-        List<File> compileClasspath =
-                CollectionsKt.map(
-                        CollectionsKt.filterIsInstance(
-                                myEnvironment.getConfiguration().get(CLIConfigurationKeys.CONTENT_ROOTS),
-                                JvmClasspathRoot.class),
-                        JvmClasspathRoot::getFile);
-        return CollectionsKt.intersect(compileClasspath, includeFromCompileClasspath);
-    }
-
 
     @NotNull
     protected String generateToText() {
@@ -540,8 +315,7 @@ public abstract class CodegenTestCase extends KtUsefulTestCase {
             boolean ignoreDexing = myFiles.getPsiFiles().stream().anyMatch(
                 it -> InTextDirectivesUtils.isDirectiveDefined(it.getText(), "IGNORE_DEXING")
             );
-            if (verifyWithDex() && DxChecker.RUN_DX_CHECKER && !ignoreDexing) {
-                DxChecker.check(classFileFactory);
+            if (verifyWithDex() && D8Checker.RUN_D8_CHECKER && !ignoreDexing) {
                 D8Checker.check(classFileFactory);
             }
         }
@@ -586,50 +360,6 @@ public abstract class CodegenTestCase extends KtUsefulTestCase {
         return true;
     }
 
-    private static boolean verifyAllFilesWithAsm(ClassFileFactory factory, ClassLoader loader, boolean reportProblems) {
-        boolean noErrors = true;
-        for (OutputFile file : ClassFileUtilsKt.getClassFiles(factory)) {
-            noErrors &= verifyWithAsm(file, loader, reportProblems);
-        }
-        return noErrors;
-    }
-
-    private static boolean verifyWithAsm(@NotNull OutputFile file, ClassLoader loader, boolean reportProblems) {
-        ClassNode classNode = new ClassNode();
-        new ClassReader(file.asByteArray()).accept(classNode, 0);
-
-        SimpleVerifier verifier = new SimpleVerifier();
-        verifier.setClassLoader(loader);
-        Analyzer<BasicValue> analyzer = new Analyzer<>(verifier);
-
-        boolean noErrors = true;
-        for (MethodNode method : classNode.methods) {
-            try {
-                analyzer.analyze(classNode.name, method);
-            }
-            catch (Throwable e) {
-                if (reportProblems) {
-                    System.err.println(file.asText());
-                    System.err.println(classNode.name + "::" + method.name + method.desc);
-
-                    //noinspection InstanceofCatchParameter
-                    if (e instanceof AnalyzerException) {
-                        // Print the erroneous instruction
-                        TraceMethodVisitor tmv = new TraceMethodVisitor(new Textifier());
-                        ((AnalyzerException) e).node.accept(tmv);
-                        PrintWriter pw = new PrintWriter(System.err);
-                        tmv.p.print(pw);
-                        pw.flush();
-                    }
-
-                    e.printStackTrace();
-                }
-                noErrors = false;
-            }
-        }
-        return noErrors;
-    }
-
     @NotNull
     protected Method generateFunction() {
         Class<?> aClass = generateFacadeClass();
@@ -647,24 +377,21 @@ public abstract class CodegenTestCase extends KtUsefulTestCase {
         return findDeclaredMethodByName(generateFacadeClass(), name);
     }
 
+    @Override
     protected void updateConfiguration(@NotNull CompilerConfiguration configuration) {
-
+        setCustomDefaultJvmTarget(configuration);
     }
 
     protected ClassBuilderFactory getClassBuilderFactory() {
         return ClassBuilderFactories.TEST;
     }
 
-    protected void setupEnvironment(@NotNull KotlinCoreEnvironment environment) {
-
-    }
-
-    protected void setCustomDefaultJvmTarget(CompilerConfiguration configuration) {
+    private static void setCustomDefaultJvmTarget(CompilerConfiguration configuration) {
         if (DEFAULT_JVM_TARGET != null) {
             JvmTarget customDefaultTarget = JvmTarget.fromString(DEFAULT_JVM_TARGET);
             assert customDefaultTarget != null : "Can't construct JvmTarget for " + DEFAULT_JVM_TARGET;
             JvmTarget originalTarget = configuration.get(JVMConfigurationKeys.JVM_TARGET);
-            if (originalTarget == null || customDefaultTarget.getBytecodeVersion() > originalTarget.getBytecodeVersion()) {
+            if (originalTarget == null || customDefaultTarget.getMajorVersion() > originalTarget.getMajorVersion()) {
                 // It's not safe to substitute target in general
                 // cause it can affect generated bytecode and original behaviour should be tested somehow.
                 // Original behaviour testing is perfomed by
@@ -686,21 +413,10 @@ public abstract class CodegenTestCase extends KtUsefulTestCase {
         File javaSourceDir = writeJavaFiles(files);
 
         configurationKind = extractConfigurationKind(files);
-        boolean loadAndroidAnnotations = files.stream().anyMatch(
-                it -> InTextDirectivesUtils.isDirectiveDefined(it.content, "ANDROID_ANNOTATIONS")
-        );
-
-        List<String> javacOptions = extractJavacOptions(files);
-        List<File> classpath = new ArrayList<>();
-        classpath.add(getAnnotationsJar());
-
-        if (loadAndroidAnnotations) {
-            classpath.add(ForTestCompileRuntime.androidAnnotationsForTests());
-        }
 
         CompilerConfiguration configuration = createConfiguration(
-                configurationKind, getJdkKind(files),
-                classpath,
+                configurationKind, getTestJdkKind(files), getBackend(),
+                Collections.singletonList(getAnnotationsJar()),
                 ArraysKt.filterNotNull(new File[] {javaSourceDir}),
                 files
         );
@@ -727,119 +443,105 @@ public abstract class CodegenTestCase extends KtUsefulTestCase {
             List<String> javaClasspath = new ArrayList<>();
             javaClasspath.add(kotlinOut.getPath());
 
-            if (loadAndroidAnnotations) {
-                javaClasspath.add(ForTestCompileRuntime.androidAnnotationsForTests().getPath());
-            }
-            javaClasspath.addAll(CollectionsKt.map(getExtraDependenciesFromKotlinCompileClasspath(), File::getPath));
+            updateJavaClasspath(javaClasspath);
 
             javaClassesOutputDirectory = getJavaClassesOutputDirectory();
-            compileJava(findJavaSourcesInDirectory(javaSourceDir), javaClasspath, javacOptions, javaClassesOutputDirectory);
+            List<String> javacOptions = extractJavacOptions(
+                    files,
+                    configuration.get(JVMConfigurationKeys.JVM_TARGET),
+                    configuration.getBoolean(JVMConfigurationKeys.ENABLE_JVM_PREVIEW)
+            );
+            List<String> finalJavacOptions = prepareJavacOptions(javaClasspath, javacOptions, javaClassesOutputDirectory);
+
+            try {
+                runJavacTask(
+                        findJavaSourcesInDirectory(javaSourceDir).stream().map(File::new).collect(Collectors.toList()),
+                        finalJavacOptions
+                );
+            }
+            catch (IOException e) {
+                throw ExceptionUtilsKt.rethrow(e);
+            }
         }
     }
 
-
-    protected ConfigurationKind extractConfigurationKind(@NotNull List<TestFile> files) {
-        boolean addRuntime = false;
-        boolean addReflect = false;
-        for (TestFile file : files) {
-            if (InTextDirectivesUtils.isDirectiveDefined(file.content, "WITH_RUNTIME")) {
-                addRuntime = true;
-            }
-            if (InTextDirectivesUtils.isDirectiveDefined(file.content, "WITH_REFLECT")) {
-                addReflect = true;
-            }
-        }
-
-        return addReflect ? ConfigurationKind.ALL :
-               addRuntime ? ConfigurationKind.NO_KOTLIN_REFLECT :
-               ConfigurationKind.JDK_ONLY;
+    protected void runJavacTask(@NotNull Collection<File> files, @NotNull List<String> options) throws IOException {
+        KotlinTestUtils.compileJavaFiles(files, options);
     }
+
+    protected void updateJavaClasspath(@NotNull List<String> javaClasspath) {}
 
     @NotNull
-    protected static List<String> extractJavacOptions(@NotNull List<TestFile> files) {
+    protected static List<String> extractJavacOptions(
+            @NotNull List<TestFile> files,
+            @Nullable JvmTarget kotlinTarget,
+            boolean isJvmPreviewEnabled
+    ) {
         List<String> javacOptions = new ArrayList<>(0);
         for (TestFile file : files) {
             javacOptions.addAll(InTextDirectivesUtils.findListWithPrefixes(file.content, "// JAVAC_OPTIONS:"));
         }
-        updateJavacOptions(javacOptions);
+
+        if (kotlinTarget != null && isJvmPreviewEnabled) {
+            javacOptions.add("--release");
+            javacOptions.add(kotlinTarget.getDescription());
+            javacOptions.add("--enable-preview");
+            return javacOptions;
+        }
+
+        String javaTarget = CodegenTestUtil.computeJavaTarget(javacOptions, kotlinTarget);
+        if (javaTarget != null) {
+            javacOptions.add("-source");
+            javacOptions.add(javaTarget);
+            javacOptions.add("-target");
+            javacOptions.add(javaTarget);
+        }
         return javacOptions;
     }
 
-    private static void updateJavacOptions(@NotNull List<String> javacOptions) {
-        if (JAVA_COMPILATION_TARGET != null && !javacOptions.contains("-target")) {
-            javacOptions.add("-source");
-            javacOptions.add(JAVA_COMPILATION_TARGET);
-            javacOptions.add("-target");
-            javacOptions.add(JAVA_COMPILATION_TARGET);
-        }
-    }
-
+    @NotNull
+    @Override
     protected TargetBackend getBackend() {
         return TargetBackend.JVM;
     }
 
-    public static class TestFile implements Comparable<TestFile> {
-        public final String name;
-        public final String content;
-
-        public TestFile(@NotNull String name, @NotNull String content) {
-            this.name = name;
-            this.content = content;
-        }
-
-        @Override
-        public int compareTo(@NotNull TestFile o) {
-            return name.compareTo(o.name);
-        }
-
-        @Override
-        public int hashCode() {
-            return name.hashCode();
-        }
-
-        @Override
-        public boolean equals(Object obj) {
-            return obj instanceof TestFile && ((TestFile) obj).name.equals(name);
-        }
-
-        @Override
-        public String toString() {
-            return name;
-        }
-    }
-
-    protected void doTest(String filePath) throws Exception {
+    @Override
+    protected void doTest(@NotNull String filePath) throws Exception {
         File file = new File(filePath);
 
-        String expectedText = KotlinTestUtils.doLoadFile(file);
-        if (!coroutinesPackage.isEmpty()) {
-            expectedText = expectedText.replace("COROUTINES_PACKAGE", coroutinesPackage);
-        }
-
-        List<TestFile> testFiles = createTestFiles(file, expectedText);
+        String expectedText = KtTestUtil.doLoadFile(file);
+        List<TestFile> testFiles = createTestFilesFromFile(file, expectedText);
 
         doMultiFileTest(file, testFiles);
     }
 
-    protected void doTestWithCoroutinesPackageReplacement(String filePath, String packageName) throws Exception {
-        this.coroutinesPackage = packageName;
-        doTest(filePath);
+    @Override
+    @NotNull
+    protected List<TestFile> createTestFilesFromFile(@NotNull File file, @NotNull String expectedText) {
+        return createTestFilesFromFile(file, expectedText, parseDirectivesPerFiles(), getBackend());
     }
 
     @NotNull
-    private List<TestFile> createTestFiles(File file, String expectedText) {
-        List testFiles = TestFiles.createTestFiles(file.getName(), expectedText, new TestFiles.TestFileFactoryNoModules<TestFile>() {
-            @NotNull
-            @Override
-            public TestFile create(@NotNull String fileName, @NotNull String text, @NotNull Map<String, String> directives) {
-                return new TestFile(fileName, text);
-            }
-        }, coroutinesPackage);
+    public static List<TestFile> createTestFilesFromFile(
+            @NotNull File file,
+            @NotNull String expectedText,
+            boolean parseDirectivesPerFiles,
+            @NotNull TargetBackend backend
+    ) {
+        List<TestFile> testFiles =
+                TestFiles.createTestFiles(file.getName(), expectedText, new TestFiles.TestFileFactoryNoModules<TestFile>() {
+                    @NotNull
+                    @Override
+                    public TestFile create(@NotNull String fileName, @NotNull String text, @NotNull Directives directives) {
+                        return new TestFile(fileName, text, directives);
+                    }
+                }, false, parseDirectivesPerFiles);
         if (InTextDirectivesUtils.isDirectiveDefined(expectedText, "WITH_HELPERS")) {
-            testFiles.add(new TestFile("CodegenTestHelpers.kt", TestHelperGeneratorKt.createTextForCodegenTestHelpers(getBackend())));
+            testFiles.add(new TestFile("CodegenTestHelpers.kt", TestHelperGeneratorKt.createTextForCodegenTestHelpers(backend)));
         }
         return testFiles;
     }
+
 
     @NotNull
     protected File getJavaSourcesOutputDirectory() {
@@ -858,7 +560,7 @@ public abstract class CodegenTestCase extends KtUsefulTestCase {
     @NotNull
     private static File createTempDirectory(String prefix) {
         try {
-            return KotlinTestUtils.tmpDir(prefix);
+            return KtTestUtil.tmpDir(prefix);
         } catch (IOException e) {
             throw ExceptionUtilsKt.rethrow(e);
         }
@@ -873,18 +575,11 @@ public abstract class CodegenTestCase extends KtUsefulTestCase {
 
         for (TestFile testFile : javaFiles) {
             File file = new File(dir, testFile.name);
-            KotlinTestUtils.mkdirs(file.getParentFile());
+            KtTestUtil.mkdirs(file.getParentFile());
             FilesKt.writeText(file, testFile.content, Charsets.UTF_8);
         }
 
         return dir;
-    }
-
-    protected void doMultiFileTest(
-            @NotNull File wholeFile,
-            @NotNull List<TestFile> files
-    ) throws Exception {
-        throw new UnsupportedOperationException("Multi-file test cases are not supported in this test");
     }
 
     protected void callBoxMethodAndCheckResult(URLClassLoader classLoader, String className)
@@ -917,7 +612,7 @@ public abstract class CodegenTestCase extends KtUsefulTestCase {
                 Thread.currentThread().setContextClassLoader(classLoader);
             }
             try {
-                result = (String) method.invoke(null);
+                result = runBoxMethod(method);
             }
             finally {
                 if (savedClassLoader != classLoader) {
